// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the inline spinner 1`] = `
<div
  aria-busy="true"
  className="spinner inline"
  role="alert"
/>
`;

exports[`renders the small spinner 1`] = `
<div
  aria-busy="true"
  className="spinner small"
  role="alert"
/>
`;

exports[`renders the spinner 1`] = `
<div
  aria-busy="true"
  className="spinner"
  role="alert"
/>
`;
